--- a/admin/package.json
+++ b/admin/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "dependencies": {
     "area-data": "^1.0.0",
-    "axios": "^0.17.1",
+    "axios": "^0.18.0",
     "clipboard": "^1.7.1",
     "countup": "^1.8.2",
     "cropperjs": "^1.2.1",
@@ -67,6 +67,7 @@
     "html-webpack-plugin": "^2.28.0",
     "less": "^2.7.3",
     "less-loader": "^4.0.5",
+    "mockjs": "^1.0.1-beta3",
     "semver": "^5.4.1",
     "style-loader": "^0.19.1",
     "unsupported": "^1.1.0",
