--- a/website/package.json
+++ b/website/package.json
@@ -54,6 +54,7 @@
     "stylus-loader": "^3.0.2",
     "uglifyjs-webpack-plugin": "^1.1.1",
     "url-loader": "^0.5.8",
+    "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.0.1",
     "vue-loader": "^13.3.0",
     "vue-property-decorator": "^8.0.0",
