--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "gulp": "cd gulp && gulp default",
     "admin": "cd admin && yarn dev",
     "website": "cd website && yarn dev"
   },
@@ -20,5 +21,12 @@
   "devDependencies": {
     "vue-concise-slider": "^3.3.8",
     "vue-property-decorator": "^8.0.0"
+  },
+  "dependencies": {
+    "fancy-log": "^1.3.3",
+    "gulp": "^4.0.0",
+    "gulp-zip": "^4.2.0",
+    "ssh2": "^0.8.2",
+    "yargs": "^13.2.2"
   }
 }
