--- a/website/package.json
+++ b/website/package.json
@@ -56,6 +56,7 @@
     "url-loader": "^0.5.8",
     "vue-awesome-swiper": "^3.1.3",
     "vue-class-component": "^7.0.1",
+    "vue-layer": "^0.9.10",
     "vue-loader": "^13.3.0",
     "vue-property-decorator": "^8.0.0",
     "vue-router": "^3.0.2",
