--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "gulp": "cd gulp && gulp default",
     "admin": "cd admin && yarn dev",
-    "website": "cd website && yarn dev"
+    "website": "cd website && yarn dev",
+    "build:website": "cd website && yarn build",
+    "build:admin": "cd admin && yarn build"
   },
   "repository": {
     "type": "git",
